--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "Sm64Online",
   "version": "1.0.3",
   "description": "This is the official repository.",
-  "main": "index.js",
+  "main": "Sm64Online.js",
+  "author": "SpiceyWolf, MelonSpeedruns",
+  "credits": "",
+  "license": "GPL3",
   "dependencies": {},
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Modloader-Lost-Mods/Sm64Online.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Modloader-Lost-Mods/Sm64Online/issues"
   },
